# Shotclassif

./: .gitignore  Cargo.toml  config.toml  readme.md
src/: app.rs  main.rs  ui.rs  viewmodel.rs
