[package]
name = "shotclassif"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"

ratatui-image = "8.0.1"
image = "0.25.6"

serde = { version = "1.0", features = ["derive"] }
toml = "0.8.23"
glob = "0.3.2"

anyhow = "1.0"
